--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,7 @@
 .navbar-lewagon {
   justify-content: space-between;
-  background: white;
+  background: #FF7A02;
+  background-image: linear-gradient(to right, #FF7010, #FFD50B);
 }
 
 .navbar-lewagon .navbar-collapse {
