--- a/app/views/dogs/show.html.erb
+++ b/app/views/dogs/show.html.erb
@@ -3,6 +3,8 @@
 <p><%= @dog.description %></p>
 <p><%= @dog.rate %></p>
 <p><%= @dog.age %></p>
+<%= cl_image_tag @dog.photo, height:150, width: 200, crop: :fill %>
 
-<%= link_to "Delete", dogs_path, method: :delete %>
+<%= link_to "Delete", dog_path(@dog), method: :delete %>
+<%= link_to "Back to all dogs", dogs_path %>
 
