--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,10 +1,44 @@
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.pexels.com/photos/850602/pexels-photo-850602.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500);">
   <div class="container">
-    <h1>Le Wagon brings <strong>tech skills</strong> to <strong>creative people</strong>!</h1>
-    <p>Change your life and learn to code at one of our campuses around the world.</p>
-      <div class="btn-treehouse">
-        <%= link_to 'Get started as an owner', new_user_session_path %>
+    <h1>Share<strong> the love</strong> of<strong> Dogs</strong>!</h1>
+    <p>Connecting dog owners with local dog borrowers for walks, weekends and holidays</p>
+      <div class="d-flex justify-content-center mx-3">
+        <div class="btn-treehouse">
+          <%= link_to 'Get started as an owner', new_user_session_path %>
+        </div>
+
+         <div class="btn-treehouse">
+          <%= link_to 'Get started as an borrower', new_user_session_path %>
+        </div>
       </div>
+  </div>
+</div>
+<br>
+
+<div class="container text-center">
+  <div class="center-part">
+    <h2><strong>Check our super cute dogs</strong></h2>
+  </div>
+</div>
+
+<div class="container text-center">
+  <p>Why use our service</p>
+    <div class="row mt-3">
+      <div class="col">
+        <h3>Safety</h3>
+        <p>Lorem ipsum dolor sit amet, in ius errem aperiam, te adipisci referrentur mel. Liber vidisse has no, idque everti omittantur eos ex. Nec labore aliquando id, ex vel altera nostrud, postulant vulputate qui ad. Ne mei eius idque nusquam, ne pri quod oblique. Et audire aliquip volutpat vix.</p>
+      </div>
+
+      <div class="col">
+        <h3>Community</h3>
+        <p>Lorem ipsum dolor sit amet, in ius errem aperiam, te adipisci referrentur mel. Liber vidisse has no, idque everti omittantur eos ex. Nec labore aliquando id, ex vel altera nostrud, postulant vulputate qui ad. Ne mei eius idque nusquam, ne pri quod oblique. Et audire aliquip volutpat vix.</p>
+      </div>
+
+      <div class="col">
+        <h3>Feel good</h3>
+        <p>Lorem ipsum dolor sit amet, in ius errem aperiam, te adipisci referrentur mel. Liber vidisse has no, idque everti omittantur eos ex. Nec labore aliquando id, ex vel altera nostrud, postulant vulputate qui ad. Ne mei eius idque nusquam, ne pri quod oblique. Et audire aliquip volutpat vix.</p>
+      </div>
+
   </div>
 </div>
 
