create and delete booking

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,7 +8,7 @@
         </div>
 
          <div class="btn-treehouse">
-          <%= link_to 'Get started as an borrower', new_user_session_path %>
+          <%= link_to 'Get started as an borrower', dogs_path %>
         </div>
       </div>
   </div>
