--- a/app/views/dogs/show.html.erb
+++ b/app/views/dogs/show.html.erb
@@ -6,5 +6,7 @@
 <%= cl_image_tag @dog.photo, height:150, width: 200, crop: :fill %>
 
 <%= link_to "Delete", dog_path(@dog), method: :delete %>
+
+<%= link_to "Book", new_dog_booking_path(@dog) %>
 <%= link_to "Back to all dogs", dogs_path %>
 
