--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,14 +1,24 @@
-user show page
+<h1>Welcome, <%= @user.first_name.capitalize %>!</h1>
 
-
-<%= @user.dogs.each do |dog| %>
+<% @user.dogs.each do |dog| %>
   <%= dog.name %>
 <% end %>
 
+<br>
+<br>
 
 
-<%= @user.bookings.each do |booking| %>
-<%= link_to booking_path(booking), method: :delete,data: { confirm: "Are you sure you want to delete this booking?" } do %>
+<h3>Your bookings:</h3>
+<% @user.bookings.each do |booking| %>
+  <p><strong>Booking for: </strong><%= booking.dog.name %></p>
+  <p><strong>Start Date: </strong><%= booking.start_date %></p>
+  <p><strong>End Date:</strong><%= booking.end_date %></p>
+  <p><strong>Comment: </strong><%= booking.comment%></p>
+  <%= link_to booking_path(booking), method: :delete,data: { confirm: "Are you sure you want to delete this booking?" } do %>
         <i class="far fa-trash-alt"></i>
       <% end %>
 <% end %>
+
+<%= link_to "Back to my profile", user_path(@user) %>
+
+<%= link_to "Back to homepage", root_path %>
