--- a/app/assets/stylesheets/pages/_dog_index.scss
+++ b/app/assets/stylesheets/pages/_dog_index.scss
@@ -1,5 +1,5 @@
 .dog-index {
-  background-image: url('../images/dog-index-background.jpg');
+  min-height: calc(100vh - 163.97px)
 }
 
 .cards {
@@ -42,6 +42,10 @@
     text-decoration: none;
     color: orange;
   }
+}
+
+.name-dog {
+  text-size: 25px !important;
 }
 
 // Smallest device
