--- a/app/views/dogs/show.html.erb
+++ b/app/views/dogs/show.html.erb
@@ -1,10 +1,23 @@
-<h1>Details about <%= @dog.name %></h1>
-<p><%= @dog.breed %></p>
-<p><%= @dog.description %></p>
-<p><%= @dog.rate %></p>
-<p><%= @dog.age %></p>
-<%= cl_image_tag @dog.photo, height:150, width: 200, crop: :fill %>
 
-<%= link_to "Delete", dog_path(@dog), method: :delete %>
-<%= link_to "Back to all dogs", dogs_path %>
+<div class="show-dog container">
+  <%= cl_image_tag @dog.photo, crop: :fill, class:"dog-image" %>
+  <h1 class='title'><%= @dog.name %></h1>
+  <div class="dog-info">
+    <div class="">
+      <p><strong>Breed: </strong><%= @dog.breed %></p>
+      <p><strong>Age: </strong><%= @dog.age %></p>
+      <p><strong>Description: </strong><%= @dog.description %></p>
+      <p><strong>Price: </strong><%= @dog.rate %>£/day</p>
+    </div>
+  </div>
 
+  <div class="links">
+    <% if policy(@dog).edit? %>
+      <%= link_to "Update", edit_dog_path(@dog) %>
+    <% end %>
+    <% if policy(@dog).destroy? %>
+      <%= link_to "Delete", dog_path(@dog), method: :delete %>
+    <% end %>
+    <%= link_to "Back to all dogs", dogs_path %>
+  </div>
+</div>
