--- a/app/assets/stylesheets/components/_center_div.scss
+++ b/app/assets/stylesheets/components/_center_div.scss
@@ -1,6 +1,6 @@
 .center-part  {
   h2 {
-        color: white;
+        color: black;
         text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
         font-size: 32px;
       }
