--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,14 +2,17 @@
   <div class="container">
     <h1>Share<strong> the love</strong> of<strong> Dogs</strong>!</h1>
     <p>Connecting dog owners with local dog borrowers for walks, weekends and holidays</p>
-      <div class="d-flex justify-content-center mx-3">
-        <div class="btn-treehouse">
-          <%= link_to 'Get started as an owner', new_user_session_path %>
-        </div>
+    <br>
+      <div class="d-flex justify-content-center mx-3 mt-3">
+          <%= link_to new_user_session_path, class:"link-text" do %>
+            <div class="btn-treehouse"> Get started as an owner </div>
+          <% end %>
 
-         <div class="btn-treehouse">
-          <%= link_to 'Get started as an borrower', new_user_session_path %>
-        </div>
+          <%= link_to new_user_session_path, class:"link-text" do %>
+            <div class="btn-treehouse">
+              Get started as an borrower
+             </div>
+          <% end %>
       </div>
   </div>
 </div>
@@ -17,28 +20,57 @@
 
 <div class="container text-center">
   <div class="center-part">
-    <h2><strong>Check our super cute dogs</strong></h2>
+    <h2><strong>Our testimonies</strong></h2>
+
+    <div class="card-product">
+      <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg">
+      <div class="card-product-infos">
+        <h2>Product name</h2>
+        <p>Product description with <strong>relevant info</strong> only.</p>
+      </div>
+    </div>
+
+    <div class="card-product">
+      <img src="https://images.pexels.com/photos/1111028/pexels-photo-1111028.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500">
+      <div class="card-product-infos">
+        <h2>Product name</h2>
+        <p>Product description with <strong>relevant info</strong> only.</p>
+      </div>
+    </div>
+
+    <div class="card-product">
+      <img src="https://images.pexels.com/photos/341378/pexels-photo-341378.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500">
+      <div class="card-product-infos">
+        <h2>Product name</h2>
+        <p>Product description with <strong>relevant info</strong> only.</p>
+      </div>
+    </div>
   </div>
 </div>
 
-<div class="container text-center">
-  <p>Why use our service</p>
-    <div class="row mt-3">
-      <div class="col">
-        <h3>Safety</h3>
-        <p>Lorem ipsum dolor sit amet, in ius errem aperiam, te adipisci referrentur mel. Liber vidisse has no, idque everti omittantur eos ex. Nec labore aliquando id, ex vel altera nostrud, postulant vulputate qui ad. Ne mei eius idque nusquam, ne pri quod oblique. Et audire aliquip volutpat vix.</p>
-      </div>
+<div class="orange-font">
+  <div class="container text-center">
+    <h3>Why use our service</h3>
+      <div class="row mt-3">
+        <div class="col">
+          <i class="fas fa-shield-alt" style="font-size: 2.73em; color: #FF7010;"></i>
+          <h3>Safety</h3>
+          <p>Lorem ipsum dolor sit amet, in ius errem aperiam, te adipisci referrentur mel. Liber vidisse has no, idque everti omittantur eos ex. Nec labore aliquando id, ex vel altera nostrud, postulant vulputate qui ad. Ne mei eius idque nusquam, ne pri quod oblique. Et audire aliquip volutpat vix.</p>
+        </div>
 
-      <div class="col">
-        <h3>Community</h3>
-        <p>Lorem ipsum dolor sit amet, in ius errem aperiam, te adipisci referrentur mel. Liber vidisse has no, idque everti omittantur eos ex. Nec labore aliquando id, ex vel altera nostrud, postulant vulputate qui ad. Ne mei eius idque nusquam, ne pri quod oblique. Et audire aliquip volutpat vix.</p>
-      </div>
+        <div class="col">
+          <i class="fas fa-users" style="font-size: 2.73em; color: #FF7010;"></i>
+          <h3>Community</h3>
+          <p>Lorem ipsum dolor sit amet, in ius errem aperiam, te adipisci referrentur mel. Liber vidisse has no, idque everti omittantur eos ex. Nec labore aliquando id, ex vel altera nostrud, postulant vulputate qui ad. Ne mei eius idque nusquam, ne pri quod oblique. Et audire aliquip volutpat vix.</p>
+        </div>
 
-      <div class="col">
-        <h3>Feel good</h3>
-        <p>Lorem ipsum dolor sit amet, in ius errem aperiam, te adipisci referrentur mel. Liber vidisse has no, idque everti omittantur eos ex. Nec labore aliquando id, ex vel altera nostrud, postulant vulputate qui ad. Ne mei eius idque nusquam, ne pri quod oblique. Et audire aliquip volutpat vix.</p>
-      </div>
+        <div class="col">
+          <i class="far fa-heart" style="font-size: 2.73em; color: #FF7010;"></i>
+          <h3>Feel</h3>
+          <p>Lorem ipsum dolor sit amet, in ius errem aperiam, te adipisci referrentur mel. Liber vidisse has no, idque everti omittantur eos ex. Nec labore aliquando id, ex vel altera nostrud, postulant vulputate qui ad. Ne mei eius idque nusquam, ne pri quod oblique. Et audire aliquip volutpat vix.</p>
+        </div>
 
+    </div>
   </div>
 </div>
 
