--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,11 +1,27 @@
 <h1>Welcome, <%= @user.first_name.capitalize %>!</h1>
 
-<% @user.dogs.each do |dog| %>
-  <%= dog.name %>
-<% end %>
 
-<br>
-<br>
+<div class="cards">
+      <% @user.dogs.each do |dog| %>
+        <div class="card-dog m-3">
+          <%= link_to dog_path(dog), class:"dog-card-link" do %>
+            <div class="photo-dog" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path(dog.photo.url) %>')">
+            </div>
+            <div class="card-dog-infos">
+              <div >
+                <h1 class="name-dog"><%= dog.name %></h1>
+                <p><%= dog.description %></p>
+              </div>
+
+              <h2 class="card-dog-pricing"><%= dog.rate %>£</h2>
+            </div>
+          <% end %>
+        </div>
+      <% end %>
+    </div>
+
+
+
 
 
 <h3>Your bookings:</h3>
