--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -27,7 +27,7 @@
   <div class="center-part">
     <h2><strong>Our stories</strong></h2>
 
-    <div class="card-product">
+    <div class="card-product move-right">
       <img src="https://images.unsplash.com/photo-1535812859-6bfd2f132e78?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60">
       <div class="card-product-infos">
         <h2>Product name</h2>
@@ -35,7 +35,7 @@
       </div>
     </div>
 
-    <div class="card-product">
+    <div class="card-product move-left">
       <img src="https://images.pexels.com/photos/1111028/pexels-photo-1111028.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500">
       <div class="card-product-infos">
         <h2>Product name</h2>
@@ -43,7 +43,7 @@
       </div>
     </div>
 
-    <div class="card-product">
+    <div class="card-product move-right">
       <img src="https://images.pexels.com/photos/341378/pexels-photo-341378.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500">
       <div class="card-product-infos">
         <h2>Product name</h2>
