--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,3 +1,25 @@
-<h1>New booking</h1>
-<%= render 'form', booking: @booking %>
-<%= link_to 'Cancel', dog_path(@dog) %>
+<!--
+<div class="booking-container" >
+ <div class="test" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://images.pexels.com/photos/262713/pexels-photo-262713.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260')">
+</div> -->
+
+<div class="card-category">
+  <div class="form-booking-container box" >
+    <h1 class='title py-4'>Booking with <span class='text-primary'><%= @dog.name %></span>
+     </h1>
+
+    <div class="d-flex justify-content-around">
+      <%= cl_image_tag @dog.photo, crop: :fill, class:"form-booking-image" %>
+      <div class="form-booking-input">
+        <%= render 'form', booking: @booking %>
+      </div>
+    </div>
+
+    <div class="text-right p-3">
+      <%= link_to 'Cancel', dog_path(@dog) %>
+    </div>
+  </div>
+
+  </div>
+
+</div>
