--- a/app/views/dogs/show.html.erb
+++ b/app/views/dogs/show.html.erb
@@ -20,5 +20,8 @@
       <%= link_to "Delete", dog_path(@dog), method: :delete %>
     <% end %>
     <%= link_to "Back to all dogs", dogs_path %>
+    <br>
+    <%= link_to "Book!", new_dog_booking_path(@dog) %>
+
   </div>
 </div>
