--- a/app/assets/stylesheets/pages/_container_with_icons.scss
+++ b/app/assets/stylesheets/pages/_container_with_icons.scss
@@ -2,4 +2,7 @@
 
     color: #FF7010;
     text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+    font-size: 15px;
+    margin-top: 176px;
+    padding: 39px;
 }
