--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -3,3 +3,24 @@
 body {
   background-color: #F7F7F7;
 }
+.dog-prints {
+  width: 100%;
+  height: 100%;
+  display: block;
+  position: relative
+
+}
+
+
+.dog-prints::after {
+background-image:url('https://media.rainpos.com/2040/50966_2.jpg');
+content: "";
+display: block;
+position: absolute;
+top: 0px;
+left: 0px;
+width: 100%;
+height: 100%;
+z-index: -1;
+opacity: 0.2;
+}
