--- a/app/assets/stylesheets/pages/_homepage_cards.scss
+++ b/app/assets/stylesheets/pages/_homepage_cards.scss
@@ -5,7 +5,7 @@
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   display: flex;
   align-items: center;
-  margin: 16px;
+  margin: 24px 56px;
   border-radius: 3px;
 
   animation-duration: 3s;
