--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
     <p>Connecting dog owners with local dog borrowers for walks, weekends and holidays</p>
     <br>
     <% if user_signed_in? %>
-      <div></div>
+    <!--   <div></div> -->
     <% else %>
       <div class="d-flex justify-content-center mx-3">
           <%= link_to new_user_session_path, class:"link-text" do %>
@@ -21,61 +21,76 @@
       </div>
   </div>
 </div>
-<br>
+ <div class="dog-prints">
+  <!-- <div class="container text-center"> -->
+    <div class="center-part">
+        <h2 class="text-center"><strong>Our stories</strong></h2>
 
-<div class="container text-center">
-  <div class="center-part">
-    <h2><strong>Our stories</strong></h2>
+      <div class="card-product move-right">
+        <img src="https://images.unsplash.com/photo-1535812859-6bfd2f132e78?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60">
+        <div class="card-product-infos">
+          <h2>Product name</h2>
+          <p>" Lorem ipsum dolor sit amet, in ius errem aperiam, te adipisci referrentur mel. Liber vidisse has no, idque everti omittantur eosonly.</p>
+        </div>
+      </div>
 
-    <div class="card-product move-right">
-      <img src="https://images.unsplash.com/photo-1535812859-6bfd2f132e78?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60">
-      <div class="card-product-infos">
-        <h2>Product name</h2>
-        <p>" Lorem ipsum dolor sit amet, in ius errem aperiam, te adipisci referrentur mel. Liber vidisse has no, idque everti omittantur eosonly.</p>
+      <div class="card-product move-left">
+        <img src="https://images.pexels.com/photos/1111028/pexels-photo-1111028.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500">
+        <div class="card-product-infos">
+          <h2>Product name</h2>
+          <p> "Lorem ipsum dolor sit amet, in ius errem aperiam, te adipisci referrentur mel. Liber vidisse has no, idque everti omittantur only"</p>
+        </div>
+      </div>
+
+      <div class="card-product move-right">
+        <img src="https://images.pexels.com/photos/341378/pexels-photo-341378.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500">
+        <div class="card-product-infos">
+          <h2>Product name</h2>
+          <p>"Lorem ipsum dolor sit amet, in ius errem aperiam, te adipisci referrentur mel. Liber vidisse has no, idque everti omittantur only.</p>
+        </div>
       </div>
     </div>
+  <!-- </div> -->
 
-    <div class="card-product move-left">
-      <img src="https://images.pexels.com/photos/1111028/pexels-photo-1111028.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500">
-      <div class="card-product-infos">
-        <h2>Product name</h2>
-        <p> "Lorem ipsum dolor sit amet, in ius errem aperiam, te adipisci referrentur mel. Liber vidisse has no, idque everti omittantur only"</p>
-      </div>
+  <div class="square-container">
+
+    <div class="poligon beige">
+     <p> Lorem ipsum dolor sit amet, in ius errem aperiam, te adipisci referrentur mel. Liber vidisse has no, idque everti omittantur eos ex. Nec labore aliquando id, ex vel altera nostrud, postulant vulputate qui ad. Ne mei eius idque nusquam, ne pri quod oblique. Et audire aliquip</p>
+
     </div>
 
-    <div class="card-product move-right">
-      <img src="https://images.pexels.com/photos/341378/pexels-photo-341378.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500">
-      <div class="card-product-infos">
-        <h2>Product name</h2>
-        <p>"Lorem ipsum dolor sit amet, in ius errem aperiam, te adipisci referrentur mel. Liber vidisse has no, idque everti omittantur only.</p>
-      </div>
+    <div class="poligon orange">
+      <p>Lorem ipsum dolor sit amet, in ius errem aperiam, te adipisci referrentur mel. Liber vidisse has no, idque everti omittantur eos ex. Nec labore aliquando id, ex vel altera nostrud, postulant vulputate qui ad. Ne mei eius idque nusquam, ne pri quod oblique. Et audire aliquip</p>
+
     </div>
+
   </div>
-</div>
 
-<div class="orange-font">
-  <div class="container text-center">
-    <br>
-    <h3>Why use our service</h3>
-      <div class="row mt-3">
-        <div class="col">
-          <i class="fas fa-shield-alt" style="font-size: 2.73em; color: #FF7010;"></i>
-          <h3>Safety</h3>
-          <p>Lorem ipsum dolor sit amet, in ius errem aperiam, te adipisci referrentur mel. Liber vidisse has no, idque everti omittantur eos ex. Nec labore aliquando id, ex vel altera nostrud, postulant vulputate qui ad. Ne mei eius idque nusquam, ne pri quod oblique. Et audire aliquip volutpat vix.</p>
-        </div>
 
-        <div class="col">
-          <i class="fas fa-users" style="font-size: 2.73em; color: #FF7010;"></i>
-          <h3>Community</h3>
-          <p>Lorem ipsum dolor sit amet, in ius errem aperiam, te adipisci referrentur mel. Liber vidisse has no, idque everti omittantur eos ex. Nec labore aliquando id, ex vel altera nostrud, postulant vulputate qui ad. Ne mei eius idque nusquam, ne pri quod oblique. Et audire aliquip volutpat vix.</p>
-        </div>
+  <div class="orange-font">
+   <!--  <div class="container text-center"> -->
+      <br>
+      <h3 class="text-center">Why use our service</h3>
+        <div class="row mt-3">
+          <div class="col text-center">
+            <i class="fas fa-shield-alt" style="font-size: 2.73em; color: #FF7010;"></i>
+            <h3 class="text-center">Safety</h3>
+            <p>Lorem ipsum dolor sit amet, in ius errem aperiam, te adipisci referrentur mel. Liber vidisse has no, idque everti omittantur eos ex. Nec labore aliquando id, ex vel altera nostrud, postulant vulputate qui ad. Ne mei eius idque nusquam, ne pri quod oblique. Et audire aliquip volutpat vix.</p>
+          </div>
 
-        <div class="col">
-          <i class="far fa-heart" style="font-size: 2.73em; color: #FF7010;"></i>
-          <h3>Feel</h3>
-          <p>Lorem ipsum dolor sit amet, in ius errem aperiam, te adipisci referrentur mel. Liber vidisse has no, idque everti omittantur eos ex. Nec labore aliquando id, ex vel altera nostrud, postulant vulputate qui ad. Ne mei eius idque nusquam, ne pri quod oblique. Et audire aliquip volutpat vix.</p>
-        </div>
+          <div class="col text-center">
+            <i class="fas fa-users" style="font-size: 2.73em; color: #FF7010;"></i>
+            <h3>Community</h3>
+            <p>Lorem ipsum dolor sit amet, in ius errem aperiam, te adipisci referrentur mel. Liber vidisse has no, idque everti omittantur eos ex. Nec labore aliquando id, ex vel altera nostrud, postulant vulputate qui ad. Ne mei eius idque nusquam, ne pri quod oblique. Et audire aliquip volutpat vix.</p>
+          </div>
 
-    </div>
+          <div class="col text-center">
+            <i class="far fa-heart" style="font-size: 2.73em; color: #FF7010;"></i>
+            <h3 class="text-center">Feel</h3>
+            <p>Lorem ipsum dolor sit amet, in ius errem aperiam, te adipisci referrentur mel. Liber vidisse has no, idque everti omittantur eos ex. Nec labore aliquando id, ex vel altera nostrud, postulant vulputate qui ad. Ne mei eius idque nusquam, ne pri quod oblique. Et audire aliquip volutpat vix.</p>
+          </div>
+
+      </div>
+  <!--   </div> -->
   </div>
 </div>
