--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -22,4 +22,25 @@
 
 .booking-background {
   background-image: url("background-bookings");
+  background-position:center;
+  background-size:cover;
+  filter: blur(4px);
+  height: 100vh;
+  width: 100%;
+}
+
+.card-category {
+  top: 200px;
+  width: 200px;
+
+}
+
+
+.form-flex {
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  width: 55%;
+  position: absolute;
+  top: 130px;
 }
