--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -2,6 +2,7 @@
   justify-content: space-between;
   background: #FF7A02;
   background-image: linear-gradient(to right, #FF7010, #FFD50B);
+  opacity: 0.9;
 }
 
 .navbar-lewagon .navbar-collapse {
