--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -21,9 +21,9 @@
       </div>
   </div>
 </div>
- <div class="dog-prints">
+ <div class="cards-container">
   <!-- <div class="container text-center"> -->
-    <div class="center-part">
+    <div class="card-center-part">
         <h2 class="text-center"><strong>Our stories</strong></h2>
 
       <div class="card-product move-right">
