--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -12,15 +12,24 @@ body {
 }
 
 
-.dog-prints::after {
-background-image:url('https://media.rainpos.com/2040/50966_2.jpg');
-content: "";
-display: block;
-position: absolute;
-top: 0px;
-left: 0px;
-width: 100%;
-height: 100%;
-z-index: -1;
-opacity: 0.2;
+// .dog-prints::after {
+// background-image:url('https://media.rainpos.com/2040/50966_2.jpg');
+// content: "";
+// display: block;
+// position: absolute;
+// top: 0px;
+// left: 0px;
+// width: 100%;
+// height: 100%;
+// z-index: -1;
+// opacity: 0.2;
+// }
+
+.cards-container {
+  margin-top : 30px;
+
+}
+
+.banner {
+  box-shadow: 0px 10px 10px rgba(0,0,0,0.35)
 }
