geocoding map with postcode search

--- a/app/assets/stylesheets/pages/_new.scss
+++ b/app/assets/stylesheets/pages/_new.scss
@@ -44,7 +44,7 @@
 }
 .form-control{
     background:transparent!important;
-    color:white!important;
+    // color:white!important;
     font-size: 18px!important;
 }
 
