--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -3,9 +3,9 @@
  <div class="test" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://images.pexels.com/photos/262713/pexels-photo-262713.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260')">
 </div> -->
 
-<div class="booking-background">
+<div class="booking-background d-flex justify-content-center align-items-center" style="min-height: calc(100vh - 163.97px);">
   <div class="card-category">
-    <div class="form-booking-container box" >
+    <div class="form-booking-container box">
       <h1 class='title py-4'>Booking with <span class='text-primary'><%= @dog.name %></span>
        </h1>
 
