--- a/app/views/dogs/_form.html.erb
+++ b/app/views/dogs/_form.html.erb
@@ -6,6 +6,10 @@
   </div>
 
   <div class="form-inputs">
+    <%= f.input :address %>
+  </div>
+
+  <div class="form-inputs">
     <%= f.input :breed %>
   </div>
 
