--- a/app/views/dogs/index.html.erb
+++ b/app/views/dogs/index.html.erb
@@ -21,5 +21,14 @@
         </div>
       <% end %>
     </div>
+  <%= render "/pages/search-form" %>
+    <div
+      id="map"
+      style="width: 100%;
+      height: 600px;"
+      data-markers="<%= @markers.to_json %>"
+      data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
+    ></div>
+
   </div>
 </div>
