--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,5 +1,6 @@
 .navbar-lewagon {
   justify-content: space-between;
+  padding: 10px 50px;
   background: #FF7A02;
   background-image: linear-gradient(to right, #FF7010, #FFD50B);
   opacity: 0.9;
@@ -11,4 +12,15 @@
 
 .navbar-lewagon .navbar-brand img {
   width: 40px;
+}
+
+#logo-navbar {
+  width: 50px;
+  height: 50px;
+}
+
+#navbar-brand {
+  letter-spacing: 20px;
+  padding-top: 13px;
+  font-size: 22px;
 }
