--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,7 +1,8 @@
 // Specific CSS for your home-page
 
 body {
-  background-color: #F7F7F7;
+  // background-color: #F7F7F7;
+  background-color: #f4e7c1;
 }
 .dog-prints {
   width: 100%;
@@ -12,7 +13,8 @@ body {
 }
 
 
-// .dog-prints::after {
+.dog-prints::after {
+
 // background-image:url('https://media.rainpos.com/2040/50966_2.jpg');
 // content: "";
 // display: block;
@@ -23,7 +25,7 @@ body {
 // height: 100%;
 // z-index: -1;
 // opacity: 0.2;
-// }
+}
 
 .cards-container {
   margin-top : 30px;
@@ -31,5 +33,5 @@ body {
 }
 
 .banner {
-  box-shadow: 0px 10px 10px rgba(0,0,0,0.35)
+  box-shadow: 0px 5px 10px rgba(0,0,0,0.35)
 }
