--- a/app/assets/stylesheets/pages/_dog_index.scss
+++ b/app/assets/stylesheets/pages/_dog_index.scss
@@ -12,12 +12,11 @@
 .card-dog {
   background-size: cover;
   background-position: center;
-  height: 320px;
-  // width: 250px;
-  display: flex;
+  width: 250px;
+  // display: flex;
   justify-content: center;
   align-items: center;
-  color: white;
+  // color: white;
   font-size: 24px;
   font-weight: bold;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
@@ -35,8 +34,8 @@
 .dog-card-link {
   height: 100%;
   width: 100%;
-  display: flex;
-  flex-direction: column;
+  // display: flex;
+  // flex-direction: column;
   color: black;
   &:hover {
     text-decoration: none;
