--- a/app/assets/stylesheets/pages/_new.scss
+++ b/app/assets/stylesheets/pages/_new.scss
@@ -39,12 +39,11 @@
     border-radius: 15px;
     border-color:#d2d2d2;
     border-width: 5px;
-    color:white;
     box-shadow:0 1px 0 #cfcfcf;
 }
 .form-control{
     background:transparent!important;
-    color:white!important;
+    // color:white!important;
     font-size: 18px!important;
 }
 
