--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,70 +1,75 @@
-<div class="container">
-
-  <div class="d-flex">
-    <h1>Welcome, <%= @user.first_name.capitalize %>!</h1>
-    <%= link_to edit_user_registration_path do %>
-      <p> Edit profile <i class="fas fa-edit"></i></p>
-    <% end %>
+<div class="profile-container">
+  <div class="m-5">
+    <%= link_to "Back to homepage", root_path, class:"btn btn-success justify-content-right" %>
+    <h1 class="text-center">Welcome, <%= @user.first_name.capitalize %>!</h1>
   </div>
+  <div class="d-flex justify-content-around">
+    <div class="card" style="width: 300px;">
+      <div class="card-body">
+        <% if @user == current_user %>
+          <h5 class="card-title">Your Profile</h5>
+          <%= cl_image_tag @user.photo, height: 200, width: 230, crop: :fill %>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">Name: <%= @user.first_name %> <%= @user.last_name %></li>
+            <li class="list-group-item">Address: <%= @user.address %></li>
+            <li class="list-group-item">Phone Number: <%= @user.phone_number %></li>
+          </ul>
+          <br>
+          <%= link_to "Edit Your Profile", edit_user_registration_path, class:"btn btn-primary justify-content-center" %>
+          <br>
+          <br>
+          <br>
 
-  <% if @user == current_user %>
-    <h3 class='text-center'>Your dog listings:</h3>
-  <% else %>
-    <h3 class='text-center'><%= @user.first_name %>'s dog listings:</h3>
-  <% end %>
+          <h4>My bookings:</h4>
+          <% counter = 0 %>
+          <% @bookings_by_user.each do |booking| %>
+            <br>
+            <p><%= counter += 1 %>.</p>
+            <p><strong>Booking for: </strong><%= booking.dog.name %></p>
+            <p><strong>Start Date: </strong><%= booking.start_date %></p>
+            <p><strong>End Date:</strong><%= booking.end_date %></p>
+            <p><strong>Comment: </strong><%= booking.comment%></p>
+            <%= link_to "Cancel", booking_path(booking), method: :delete,data: { confirm: "Are you sure you want to delete this booking?" }, class:"btn btn-primary" %>
+          <% end %>
+        <% end %>
+      </div>
+    </div>
 
-  <div class="cards">
+    <div class="users-dogs">
+      <% if @user == current_user %>
+        <h3 class='text-center'>Your dog listings:</h3>
+      <% else %>
+        <h3 class='text-center'><%= @user.first_name %>'s dog listings:</h3>
+      <% end %>
+      <div class="cards">
         <% @user.dogs.each do |dog| %>
           <div class="card-dog m-3">
             <%= link_to dog_path(dog), class:"dog-card-link" do %>
               <div class="photo-dog" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path(dog.photo.url) %>')">
               </div>
-              <div class="card-dog-infos">
-                <div >
-                  <h1 class="name-dog"><%= dog.name %></h1>
-                  <p><%= dog.description %></p>
-                </div>
-
-                <h2 class="card-dog-pricing"><%= dog.rate %>£</h2>
-              </div>
             <% end %>
+            <div class="dog-content">
+              <h1 class="name-dog text-center"><%= dog.name %></h1>
+              <h2 class="card-dog-pricing">Rate: <%= dog.rate %>£</h2>
+              <br>
+              <h2>Bookings:</h2>
+              <% counter = 0 %>
+              <% dog.bookings.each do |booking| %>
+                <div>
+                  <br>
+                  <p><%= counter += 1 %>.</p>
+                  <p><strong>Booking for: </strong><%= booking.user.first_name %></p>
+                  <p><strong>Start Date: </strong><%= booking.start_date %></p>
+                  <p><strong>End Date:</strong><%= booking.end_date %></p>
+                  <p><strong>Comment: </strong><%= booking.comment%></p>
+                  <%= link_to "Cancel", booking_path(booking), method: :delete, data: { confirm: "Are you sure you want to delete this booking?" }, class:"btn btn-primary" %>
+                </div>
+              <% end %>
+            </div>
           </div>
         <% end %>
       </div>
-  <% if @user == current_user %>
-    <h3 class='text-center'>Bookings for my dogs:</h3>
-  <% else %>
-    <h3 class='text-center'><%= @user.first_name %>'s dogs' bookings:</h3>
-  <% end %>
-  <% @bookings_for_user.each do |booking| %>
-    <div class="card-booking">
-      <p><strong>Booking by: </strong><%= booking.user.first_name %></p>
-      <p><strong>Booking for: </strong><%= booking.dog.name %></p>
-      <p><strong>Start Date: </strong><%= booking.start_date %></p>
-      <p><strong>End Date:</strong><%= booking.end_date %></p>
-      <p><strong>Comment: </strong><%= booking.comment%></p>
-      <%= link_to booking_path(booking), method: :delete,data: { confirm: "Are you sure you want to delete this booking?" } do %>
-            <i class="far fa-trash-alt"></i>
-          <% end %>
     </div>
-  <% end %>
-
-
-
-  <% if @user == current_user %>
-    <h3 class='text-center'>My bookings for other dogs:</h3>
-    <% @bookings_by_user.each do |booking| %>
-      <div class="card-booking">
-        <p><strong>Booking for: </strong><%= booking.dog.name %></p>
-        <p><strong>Start Date: </strong><%= booking.start_date %></p>
-        <p><strong>End Date:</strong><%= booking.end_date %></p>
-        <p><strong>Comment: </strong><%= booking.comment%></p>
-        <%= link_to booking_path(booking), method: :delete,data: { confirm: "Are you sure you want to delete this booking?" } do %>
-              <i class="far fa-trash-alt"></i>
-            <% end %>
-      </div>
-    <% end %>
-  <% end %>
-  <%= link_to "Back to homepage", root_path %>
+  </div>
 </div>
 
