--- a/app/views/dogs/_form.html.erb
+++ b/app/views/dogs/_form.html.erb
@@ -1,37 +1,37 @@
+<div class="container">
+  <%= simple_form_for(@dog) do |f| %>
 
-<%= simple_form_for(@dog) do |f| %>
+    <div class="form-inputs">
+      <%= f.input :name %>
+    </div>
 
-  <div class="form-inputs">
-    <%= f.input :name %>
-  </div>
+    <div class="form-inputs">
+      <%= f.input :address %>
+    </div>
 
-  <div class="form-inputs">
-    <%= f.input :address %>
-  </div>
+    <div class="form-inputs">
+      <%= f.input :breed %>
+    </div>
 
-  <div class="form-inputs">
-    <%= f.input :breed %>
-  </div>
+    <div class="form-inputs">
+      <%= f.input :description %>
+    </div>
 
-  <div class="form-inputs">
-    <%= f.input :description %>
-  </div>
+    <div class="form-inputs">
+      <%= f.input :rate %>
+    </div>
 
-  <div class="form-inputs">
-    <%= f.input :rate %>
-  </div>
+    <div class="form-inputs">
+      <%= f.input :age %>
+    </div>
 
-  <div class="form-inputs">
-    <%= f.input :age %>
-  </div>
+    <div class="photo-uploader">
+      <%= f.input :photo %>
+      <%= f.input :photo_cache, as: :hidden %>
+    </div>
 
-  <div class="photo-uploader">
-    <%= f.input :photo %>
-    <%= f.input :photo_cache, as: :hidden %>
-  </div>
+    <div class="form-actions btn btn-outline-success">
+      <%= f.button :submit %>
+    </div>
 
-  <div class="form-actions btn btn-outline-success">
-    <%= f.button :submit %>
-  </div>
-
-<% end  %>
+  <% end  %></div>
