--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -25,20 +25,6 @@
 </div>
  <div class="dog-prints">
   <!-- <div class="container text-center"> -->
-
-    <div class="card-center-part">
-        <h2 class="text-center"><strong>Our stories</strong></h2>
-
-
-      <div class="card-product move-right">
-        <img src="https://images.unsplash.com/photo-1535812859-6bfd2f132e78?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60">
-        <div class="card-product-infos">
-          <h2>Product name</h2>
-          <p>" Lorem ipsum dolor sit amet, in ius errem aperiam, te adipisci referrentur mel. Liber vidisse has no, idque everti omittantur eosonly.</p>
-        </div>
-      </div>
-
-
    <div class="stories-body">
 
       <div class="center-part">
@@ -81,7 +67,8 @@
   <div class="square-container">
 
     <div class="poligon beige">
-     <p> Lorem ipsum dolor sit amet, in ius errem aperiam, te adipisci referrentur mel. Liber vidisse has no, idque everti omittantur eos ex. Nec labore aliquando id, ex vel altera nostrud, postulant vulputate qui ad. Ne mei eius idque nusquam, ne pri quod oblique. Et audire aliquip</p>
+
+      <p> Rent my Dog connects dog owners with trusted local people who would love to look after their dog. We make it easy to arrange walks, playtime, overnight stays or holidays. Our aim is to help dog owners when they need it, give dogs more exercise and playtime and to allow people without a dog to spend quality time with one. We call it a win-win (or a woof-­woof) situation for everyone involved.</p>
 
     </div>
 
