--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -22,10 +22,10 @@
 .booking-background {
   background-image: url("background-bookings");
   background-position:center;
-  background-size:cover;
-  filter: blur(4px);
-  height: 100vh;
-  width: 100%;
+//   background-size:cover;
+//   filter: blur(4px);
+//   height: 100vh;
+//   width: 100%;
 }
 
 .card-category {
