--- a/app/views/dogs/index.html.erb
+++ b/app/views/dogs/index.html.erb
@@ -1,34 +1,37 @@
 <div class="dog-index", style="background-image: url('<%= asset_url 'dog-index-background.jpg' %>')">
 
-  <div class="container">
-
-    <h1 class="p-4 text-center">Find a friend</h1>
-    <div class="cards">
-      <% @dogs.each do |dog| %>
-        <div class="card-dog m-3">
-          <%= link_to dog_path(dog), class:"dog-card-link" do %>
-            <div class="photo-dog" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path(dog.photo.url) %>')">
-            </div>
-            <div class="card-dog-infos">
-              <div >
-                <h1 class="name-dog"><%= dog.name %></h1>
-                <p><%= dog.description %></p>
+  <!-- <div class="container"> -->
+    <div class="cards-map-box d-flex justify-content-between">
+      <div style="width: 60%">
+      <h1 class="p-4 text-center">Find a friend</h1>
+      <div class="cards">
+        <% @dogs.each do |dog| %>
+          <div class="card-dog m-3">
+            <%= link_to dog_path(dog), class:"dog-card-link" do %>
+              <div class="photo-dog" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path(dog.photo.url) %>')">
               </div>
+              <div class="card-dog-infos">
+                <div >
+                  <h1 class="name-dog"><%= dog.name %></h1>
+                  <p><%= dog.description %></p>
+                </div>
 
-              <h2 class="card-dog-pricing"><%= dog.rate %>£</h2>
-            </div>
-          <% end %>
-        </div>
-      <% end %>
+                <h2 class="card-dog-pricing"><%= dog.rate %>£</h2>
+              </div>
+            <% end %>
+          </div>
+        <% end %>
+      </div>
     </div>
-  <%= render "/pages/search-form" %>
-    <div
-      id="map"
-      style="width: 100%;
-      height: 600px;"
-      data-markers="<%= @markers.to_json %>"
-      data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
-    ></div>
-
-  </div>
+      <div
+        id="map"
+        style="width: 40%;
+        height: 100vh;"
+        data-markers="<%= @markers.to_json %>"
+        data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
+      >
+        <%= render "/pages/search-form"%>
+      </div>
+    </div>
+  <!-- </div> -->
 </div>
