--- a/app/views/dogs/show.html.erb
+++ b/app/views/dogs/show.html.erb
@@ -6,6 +6,7 @@
   <div class="dog-info">
     <div class="">
       <p><strong>Breed: </strong><%= @dog.breed %></p>
+      <p><strong>Address: </strong><%= @dog.address %></p>
       <p><strong>Age: </strong><%= @dog.age %></p>
       <p><strong>Description: </strong><%= @dog.description %></p>
       <p><strong>Price: </strong><%= @dog.rate %> £/day</p>      <p><strong>Owner: </strong><%= @dog.user.first_name %> <%= @dog.user.last_name %></p>
@@ -19,9 +20,7 @@
     <% if policy(@dog).destroy? %>
       <p><%= link_to "Delete", dog_path(@dog), method: :delete %><p>
     <% end %>
-
     <%= link_to "Back to all dogs", dogs_path %>
-    <br>
-    <%= link_to "Book!", new_dog_booking_path(@dog) %>
+    <%= link_to "Book me", new_dog_booking_path(@dog) %>
   </div>
 </div>
