--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,26 +1,39 @@
 .banner {
   background-size: cover;
-  padding: 50px 0;
+  background-position: center;
+  height: 550px;
+  box-shadow: 0px 5px 10px rgba(0,0,0,0.35)
+
 }
 
 .banner h1 {
+  font-family: Fredoka One, Helvetica, sans-serif;
   margin: 0;
-  color: white;
+  opacity: .6;
+  color: #FFF;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-  font-size: 32px;
+  font-size: 26px;
   font-weight: bold;
+  letter-spacing: 6px;
   animation-name: moveInLeft;
   animation-duration: 3s;
   animation-timing-function: ease-in-out;
 }
 
 .banner p {
-  font-size: 20px;
-  color: white;
-  opacity: .7;
+  font-family: Fredoka One, Helvetica, sans-serif;
+  font-size: 18px;
+  color: #FFF;
+  opacity: .6;
+   letter-spacing: 2px;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   animation-name: moveInRight;
   animation-duration: 3s;
+}
+
+.banner-text{
+  position: fixed;
+  top: 400px;
 }
 
 .link-text:hover {
