--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -2,14 +2,22 @@
 
 body {
   // background-color: #F7F7F7;
-  background-color: #f4e7c1;
+  // background-color: #f4e7c1;
 }
+
+.center-part h2 {
+ font-family: Fredoka One, Helvetica, sans-serif;
+ color: #FF751A;
+ letter-spacing: 6px;
+}
+
 .dog-prints {
   width: 100%;
   height: 100%;
   display: block;
-  position: relative
-
+  position: relative;
+  font-family: Fredoka One, Helvetica, sans-serif;
+  color: #FF751A;
 }
 
 
@@ -32,6 +40,3 @@ body {
 
 }
 
-.banner {
-  box-shadow: 0px 5px 10px rgba(0,0,0,0.35)
-}
