Edit and new dog page completed

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -37,3 +37,19 @@
 .button-user{
   margin-left: 475px;
 }
+
+.btn-orange-border {
+  font-family: Raleway, Helvetica, sans-serif;
+  border: 0.5mm solid #FF751A ;
+  font-weight: lighter;
+  border-radius: 18px;
+  text-align: none;
+  padding: 16px 20px;
+  transition: .2s;
+  color: #FF751A;
+}
+
+.btn-orange-border:hover {
+  color: #f9ae2c;
+  border: 0.5mm solid #f9ae2c;
+}
