--- a/app/views/dogs/_form.html.erb
+++ b/app/views/dogs/_form.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container form-styling">
   <%= simple_form_for(@dog) do |f| %>
 
     <div class="form-inputs">
@@ -29,9 +29,10 @@
       <%= f.input :photo %>
       <%= f.input :photo_cache, as: :hidden %>
     </div>
+<!--
+    <div class="btn-orange-border"> -->
+      <%= f.button :submit, class:"btn-orange-border" %>
+<!--     </div> -->
 
-    <div class="form-actions btn btn-outline-success">
-      <%= f.button :submit %>
-    </div>
-
-  <% end  %></div>
+  <% end  %>
+</div>
