--- a/app/views/dogs/edit.html.erb
+++ b/app/views/dogs/edit.html.erb
@@ -1,9 +1,10 @@
-<h1 style="color: #FF7010;" class="text-center">Edit the info of <%= @dog.name %></h1>
-<%= render 'form', dog: @dog %>
+<div class="new-dog-input">
+  <h1 style="color: #FF7010;" class="text-center">Edit <%= @dog.name %>'s profile</h1>
+  <%= render 'form', dog: @dog %>
 
 
 
-  <%= link_to dogs_path(@dog), class:"link-text" do %>
-  <div class="btn-treehouse"> Cancel</div>
-  <% end %>
-
+    <%= link_to dogs_path(@dog), class:"link-text" do %>
+    <div class="btn-treehouse"> Cancel</div>
+    <% end %>
+  </div>
