changing profile styling

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -3,7 +3,7 @@
  <div class="d-flex align-items-start main-brand">
 
     <span class= "navbar-link">
-    <%= link_to dogs_path do %>
+    <%= link_to root_path do %>
        <%= image_tag "https://image.flaticon.com/icons/svg/620/620851.svg", id: "logo-navbar" %>
     <% end %>
     </span>
