--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,11 @@
     <%#= stylesheet_pack_tag 'application', media: 'all' %>
   </head>
   <body>
-    <%= render 'shared/navbar' %>
+    <% if current_page?('/') %>
+      <%= render 'shared/home_navbar' %>
+    <% else %>
+
+    <% end %>
     <%= render 'shared/flashes' %>
     <div style="min-height: calc(100vh - 163.97px)">
       <%= yield %>
