changing booking page style

--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -19,20 +19,12 @@
   border-radius: 5px;
 }
 
-.booking-background {
-  background-image: url("background-bookings");
-  background-position:center;
-//   background-size:cover;
-//   filter: blur(4px);
-//   height: 100vh;
-//   width: 100%;
-}
 
-.card-category {
-  top: 200px;
-  width: 200px;
+// .card-category {
+//   top: 200px;
+//   width: 200px;
 
-}
+// }
 
 
 .form-flex {
