--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,5 @@
 <div class="profile-container">
   <div class="m-5">
-    <%= link_to "Back to homepage", root_path, class:"btn btn-success justify-content-right" %>
     <h1 class="text-center">Welcome, <%= @user.first_name.capitalize %>!</h1>
   </div>
   <div class="d-flex justify-content-around">
@@ -15,7 +14,11 @@
             <li class="list-group-item">Phone Number: <%= @user.phone_number %></li>
           </ul>
           <br>
-          <%= link_to "Edit Your Profile", edit_user_registration_path, class:"btn btn-primary justify-content-center" %>
+          <br>
+          <div class="text-center">
+            <%= link_to "Edit Your Profile", edit_user_registration_path, class:"btn-orange-border" %>
+
+          </div>
           <br>
           <br>
           <br>
@@ -29,7 +32,7 @@
             <p><strong>Start Date: </strong><%= booking.start_date %></p>
             <p><strong>End Date:</strong><%= booking.end_date %></p>
             <p><strong>Comment: </strong><%= booking.comment%></p>
-            <%= link_to "Cancel", booking_path(booking), method: :delete,data: { confirm: "Are you sure you want to delete this booking?" }, class:"btn btn-primary" %>
+            <%= link_to "Cancel", booking_path(booking), method: :delete,data: { confirm: "Are you sure you want to delete this booking?" } %>
           <% end %>
         <% end %>
       </div>
@@ -62,7 +65,7 @@
                   <p><strong>Start Date: </strong><%= booking.start_date %></p>
                   <p><strong>End Date:</strong><%= booking.end_date %></p>
                   <p><strong>Comment: </strong><%= booking.comment%></p>
-                  <%= link_to "Cancel", booking_path(booking), method: :delete, data: { confirm: "Are you sure you want to delete this booking?" }, class:"btn btn-primary" %>
+                  <p><%= link_to "Cancel", booking_path(booking), method: :delete, data: { confirm: "Are you sure you want to delete this booking?"} %></p>
                 </div>
               <% end %>
             </div>
