--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -16,7 +16,7 @@ body {
   height: 100%;
   display: block;
   position: relative;
-  font-family: Fredoka One, Helvetica, sans-serif;
+  font-family: 'Roboto', sans-serif;
   color: #FF751A;
 }
 
