--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -1,9 +1,10 @@
 // Import Google fonts
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Raleway:400,100,300,700,500");
 @import url('https://fonts.googleapis.com/css?family=Fredoka+One&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap');
 // Define fonts for body and headers
 
-$body-font: "Fredoka", "Helvetica", "sans-serif";
+$body-font: "Helvetica", "sans-serif";
 $headers-font: "Fredoka", "Helvetica", "sans-serif";
 
 
